--- a/sections/iconboxes.liquid
+++ b/sections/iconboxes.liquid
@@ -38,3 +38,19 @@
         </div>
     </div>
 </div>
+
+
+{% schema %}
+{
+    "name": "IconBox",
+    "settings": [
+
+    ],
+    "presets": [
+      {
+        "name": "IconBox"
+      }
+    ]
+  }
+
+  {% endschema %}
