--- a/assets/app.css
+++ b/assets/app.css
@@ -567,6 +567,12 @@ video {
 .left-7 {
   left: 1.75rem;
 }
+.-top-4 {
+  top: -1rem;
+}
+.m-auto {
+  margin: auto;
+}
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -582,6 +588,10 @@ video {
 .mx-7 {
   margin-left: 1.75rem;
   margin-right: 1.75rem;
+}
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 .mb-7 {
   margin-bottom: 1.75rem;
@@ -603,6 +613,9 @@ video {
 }
 .mb-9 {
   margin-bottom: 2.25rem;
+}
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 .block {
   display: block;
@@ -663,6 +676,9 @@ video {
 .max-w-\[43rem\] {
   max-width: 43rem;
 }
+.basis-1\/3 {
+  flex-basis: 33.333333%;
+}
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -690,6 +706,9 @@ video {
 .justify-between {
   justify-content: space-between;
 }
+.gap-4 {
+  gap: 1rem;
+}
 .overflow-x-hidden {
   overflow-x: hidden;
 }
@@ -704,12 +723,19 @@ video {
 .rounded-rounded-3 {
   border-radius: 3px;
 }
+.rounded-20 {
+  border-radius: 30px;
+}
 .border-b-\[5px\] {
   border-bottom-width: 5px;
 }
 .border-red-600 {
   --tw-border-opacity: 1;
   border-color: rgb(220 38 38 / var(--tw-border-opacity));
+}
+.border-orange-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(251 146 60 / var(--tw-border-opacity));
 }
 .bg-\[\#c4c4c433\] {
   background-color: #c4c4c433;
@@ -725,6 +751,10 @@ video {
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+.bg-orange-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
 }
 .px-11 {
   padding-left: 2.75rem;
@@ -796,6 +826,14 @@ video {
 }
 .text-\[26px\] {
   font-size: 26px;
+}
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 .font-black {
   font-weight: 900;
