--- a/sections/iconboxday.liquid
+++ b/sections/iconboxday.liquid
@@ -42,13 +42,13 @@
 
 {% schema %}
 {
-    "name": "IconBox",
+    "name": "IconBoxDay",
     "settings": [
 
     ],
     "presets": [
       {
-        "name": "IconBox"
+        "name": "IconBoxDay"
       }
     ]
   }
