--- a/sections/iconboxnight.liquid
+++ b/sections/iconboxnight.liquid
@@ -1,6 +1,6 @@
 <div class="flex justify-center items-center rounded-20 border-orange-400">
     <div class="absolute m-auto -top-4 bg-orange-400 rounded-20 flex justify-center items-center px-7 text-base font-normal text-white" >
-    ALL DAY
+    ALL NIGHT
     </div>
     <div class="flex flex-row basis-1/3 my-5">
         <div class="flex justify-center items-start flex-col gap-4">
@@ -42,13 +42,13 @@
 
 {% schema %}
 {
-    "name": "IconBox",
+    "name": "IconBoxNight",
     "settings": [
 
     ],
     "presets": [
       {
-        "name": "IconBox"
+        "name": "IconBoxNight"
       }
     ]
   }
