--- a/sections/hero-section.liquid
+++ b/sections/hero-section.liquid
@@ -1,5 +1,5 @@
 <div class="bg-[#c4c4c433] ">
-<section class=" pt-6 md:pt-20 pb-12 bg-red-500 clip grid items-start grid-cols-1 mx-auto md:grid-cols-2 md:max-w-3xl lg:max-w-4xl xl:max-w-6xld">
+<section class="bg-gradient-to-b from-cyan-500 to-purple-700 pt-6 md:pt-20 pb-12 grid items-start grid-cols-1 mx-auto md:grid-cols-2 md:max-w-3xl lg:max-w-4xl xl:max-w-6xld">
     
   <div class="relative md:hidden mb-7">
     {% if section.settings.title != blank %}
@@ -49,8 +49,8 @@
       {% endif %}
       <div class="flex flex-col">
       <div class="relative max-6 flex justify-center items-center mx-6">
-        <a class="w-full text-[22px] justify-center text-white flex max-w-[43rem] items-center py-4 whitespace-nowrap px-12 rounded-rounded-3 font-bold bg-green-500 uppercase" href="#some_id">
-          Order now <svg class="ml-3" width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <a class="w-full text-[22px] justify-center text-white flex max-w-[43rem] items-center py-4 whitespace-nowrap px-12 rounded-20 font-bold bg-green-500 uppercase" href="#some_id">
+          Order <span class="font-bold">now</span> <svg class="ml-3" width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M19 9.49622L0 0L3.18788 9.49622L0 19L19 9.49622Z" fill="white"/>
             </svg>
         </a>
@@ -70,7 +70,162 @@
                 {{ 'image' | placeholder_svg_tag: 'placeholder-svg' }}
                 {% endif %}
     </div>
+    <div class="flex justify-center items-center rounded-20 border-orange-400">
+      <div class="relative m-auto -top-4 bg-orange-400 rounded-20 flex justify-center items-center px-7 text-base font-normal text-white" >
+      ALL DAY
+      </div>
+      <div class="flex flex-row basis-1/3 my-5">
+          <div class="flex justify-center items-start flex-col gap-4">
+              <div class="img">
+                  <svg width="96" height="97" viewBox="0 0 96 97" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M94.5 48.5C94.5 74.4721 73.6666 95.5 48 95.5C22.3334 95.5 1.5 74.4721 1.5 48.5C1.5 22.5279 22.3334 1.5 48 1.5C73.6666 1.5 94.5 22.5279 94.5 48.5Z" stroke="white" stroke-width="3"/>
+                      <path d="M65.04 31.7C60.0599 32.9599 58.14 34.8801 56.76 38.96C57.36 34.7 57.12 22.94 42.06 17.36C44.76 25.22 44.7 37.52 40.1401 41.18C41.5801 36.32 37.7401 32.12 34.0201 29.06C36.18 41.6 20.8801 43.82 26.7001 59.66C28.4401 64.3401 32.5801 67.94 37.6801 70.1C34.5 61.7 41.94 50.3 47.2801 47.9C45.6602 51.9199 49.14 57.92 51.3 59.3C50.2199 55.8801 51.7801 54.14 52.6199 53.3C53.0398 59.6 62.1599 62.66 58.5599 71.3C64.0799 69.3199 68.9999 65.12 70.4999 57.14C72.2997 47.36 62.7599 39.8 65.0399 31.7H65.04Z" fill="white"/>
+                  </svg>
+              </div>
+              <div class="text-white text-sm font-normal">
+                  Burn Fat
+              </div>
+          </div>
+          <div class="flex justify-center items-start flex-col gap-4">
+              <div class="img">
+                  <svg width="96" height="97" viewBox="0 0 96 97" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M94.5 48.5C94.5 74.4721 73.6666 95.5 48 95.5C22.3334 95.5 1.5 74.4721 1.5 48.5C1.5 22.5279 22.3334 1.5 48 1.5C73.6666 1.5 94.5 22.5279 94.5 48.5Z" stroke="white" stroke-width="3"/>
+                      <path d="M65.04 31.7C60.0599 32.9599 58.14 34.8801 56.76 38.96C57.36 34.7 57.12 22.94 42.06 17.36C44.76 25.22 44.7 37.52 40.1401 41.18C41.5801 36.32 37.7401 32.12 34.0201 29.06C36.18 41.6 20.8801 43.82 26.7001 59.66C28.4401 64.3401 32.5801 67.94 37.6801 70.1C34.5 61.7 41.94 50.3 47.2801 47.9C45.6602 51.9199 49.14 57.92 51.3 59.3C50.2199 55.8801 51.7801 54.14 52.6199 53.3C53.0398 59.6 62.1599 62.66 58.5599 71.3C64.0799 69.3199 68.9999 65.12 70.4999 57.14C72.2997 47.36 62.7599 39.8 65.0399 31.7H65.04Z" fill="white"/>
+                  </svg>
+              </div>
+              <div class="text-white text-sm font-normal">
+                  Burn Fat
+              </div>
+          </div>
+          <div class="flex justify-center items-start flex-col gap-4">
+              <div class="img">
+                  <svg width="96" height="97" viewBox="0 0 96 97" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M94.5 48.5C94.5 74.4721 73.6666 95.5 48 95.5C22.3334 95.5 1.5 74.4721 1.5 48.5C1.5 22.5279 22.3334 1.5 48 1.5C73.6666 1.5 94.5 22.5279 94.5 48.5Z" stroke="white" stroke-width="3"/>
+                      <path d="M65.04 31.7C60.0599 32.9599 58.14 34.8801 56.76 38.96C57.36 34.7 57.12 22.94 42.06 17.36C44.76 25.22 44.7 37.52 40.1401 41.18C41.5801 36.32 37.7401 32.12 34.0201 29.06C36.18 41.6 20.8801 43.82 26.7001 59.66C28.4401 64.3401 32.5801 67.94 37.6801 70.1C34.5 61.7 41.94 50.3 47.2801 47.9C45.6602 51.9199 49.14 57.92 51.3 59.3C50.2199 55.8801 51.7801 54.14 52.6199 53.3C53.0398 59.6 62.1599 62.66 58.5599 71.3C64.0799 69.3199 68.9999 65.12 70.4999 57.14C72.2997 47.36 62.7599 39.8 65.0399 31.7H65.04Z" fill="white"/>
+                  </svg>
+              </div>
+              <div class="text-white text-sm font-normal">
+                  Burn Fat
+              </div>
+          </div>
+      </div>
+  </div>
+  <div class="flex justify-center items-center rounded-20 border-cyan-400">
+    <div class="relative m-auto -top-4 bg-cyan-400 rounded-20 flex justify-center items-center px-7 text-base font-normal text-white" >
+    ALL NIGHT
+    </div>
+    <div class="flex flex-row basis-1/3 my-5">
+        <div class="flex justify-center items-start flex-col gap-4">
+            <div class="img">
+                <svg width="96" height="97" viewBox="0 0 96 97" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M94.5 48.5C94.5 74.4721 73.6666 95.5 48 95.5C22.3334 95.5 1.5 74.4721 1.5 48.5C1.5 22.5279 22.3334 1.5 48 1.5C73.6666 1.5 94.5 22.5279 94.5 48.5Z" stroke="white" stroke-width="3"/>
+                    <path d="M65.04 31.7C60.0599 32.9599 58.14 34.8801 56.76 38.96C57.36 34.7 57.12 22.94 42.06 17.36C44.76 25.22 44.7 37.52 40.1401 41.18C41.5801 36.32 37.7401 32.12 34.0201 29.06C36.18 41.6 20.8801 43.82 26.7001 59.66C28.4401 64.3401 32.5801 67.94 37.6801 70.1C34.5 61.7 41.94 50.3 47.2801 47.9C45.6602 51.9199 49.14 57.92 51.3 59.3C50.2199 55.8801 51.7801 54.14 52.6199 53.3C53.0398 59.6 62.1599 62.66 58.5599 71.3C64.0799 69.3199 68.9999 65.12 70.4999 57.14C72.2997 47.36 62.7599 39.8 65.0399 31.7H65.04Z" fill="white"/>
+                </svg>
+            </div>
+            <div class="text-white text-sm font-normal">
+                Burn Fat
+            </div>
+        </div>
+        <div class="flex justify-center items-start flex-col gap-4">
+            <div class="img">
+                <svg width="96" height="97" viewBox="0 0 96 97" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M94.5 48.5C94.5 74.4721 73.6666 95.5 48 95.5C22.3334 95.5 1.5 74.4721 1.5 48.5C1.5 22.5279 22.3334 1.5 48 1.5C73.6666 1.5 94.5 22.5279 94.5 48.5Z" stroke="white" stroke-width="3"/>
+                    <path d="M65.04 31.7C60.0599 32.9599 58.14 34.8801 56.76 38.96C57.36 34.7 57.12 22.94 42.06 17.36C44.76 25.22 44.7 37.52 40.1401 41.18C41.5801 36.32 37.7401 32.12 34.0201 29.06C36.18 41.6 20.8801 43.82 26.7001 59.66C28.4401 64.3401 32.5801 67.94 37.6801 70.1C34.5 61.7 41.94 50.3 47.2801 47.9C45.6602 51.9199 49.14 57.92 51.3 59.3C50.2199 55.8801 51.7801 54.14 52.6199 53.3C53.0398 59.6 62.1599 62.66 58.5599 71.3C64.0799 69.3199 68.9999 65.12 70.4999 57.14C72.2997 47.36 62.7599 39.8 65.0399 31.7H65.04Z" fill="white"/>
+                </svg>
+            </div>
+            <div class="text-white text-sm font-normal">
+                Burn Fat
+            </div>
+        </div>
+        <div class="flex justify-center items-start flex-col gap-4">
+            <div class="img">
+                <svg width="96" height="97" viewBox="0 0 96 97" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M94.5 48.5C94.5 74.4721 73.6666 95.5 48 95.5C22.3334 95.5 1.5 74.4721 1.5 48.5C1.5 22.5279 22.3334 1.5 48 1.5C73.6666 1.5 94.5 22.5279 94.5 48.5Z" stroke="white" stroke-width="3"/>
+                    <path d="M65.04 31.7C60.0599 32.9599 58.14 34.8801 56.76 38.96C57.36 34.7 57.12 22.94 42.06 17.36C44.76 25.22 44.7 37.52 40.1401 41.18C41.5801 36.32 37.7401 32.12 34.0201 29.06C36.18 41.6 20.8801 43.82 26.7001 59.66C28.4401 64.3401 32.5801 67.94 37.6801 70.1C34.5 61.7 41.94 50.3 47.2801 47.9C45.6602 51.9199 49.14 57.92 51.3 59.3C50.2199 55.8801 51.7801 54.14 52.6199 53.3C53.0398 59.6 62.1599 62.66 58.5599 71.3C64.0799 69.3199 68.9999 65.12 70.4999 57.14C72.2997 47.36 62.7599 39.8 65.0399 31.7H65.04Z" fill="white"/>
+                </svg>
+            </div>
+            <div class="text-white text-sm font-normal">
+                Burn Fat
+            </div>
+        </div>
+    </div>
+</div>
 
+<div class="flex flex-row gap-3 justify-between items-center">
+  <div class="flex justify-center items-center">
+    {% if section.settings.image_bottle != blank%}
+    {% include 'responsive-image-mobile' with
+                    image: section.settings.image_bottle,
+                    image_class: "img",
+                    max_width: 150,
+                    max_height: 700
+                %}
+                {% else %}
+                {{ 'image' | placeholder_svg_tag: 'placeholder-svg' }}
+                {% endif %}
+  </div>
+  <div class="flex flex-col justify-center items-center gap-3">
+    <div class="flex flex-col justify-center items-center">
+      <svg width="40" height="29" viewBox="0 0 40 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M0 15.7336L13.6978 29L40 3.59975L36.2239 0L13.6978 21.7499L3.72382 12.1085L0 15.7336Z" fill="#22EA2A"/>
+        </svg>
+        <span>
+          SAFE AND EFFECTIVE FORMULA
+        </span>
+    </div>
+    <div class="flex flex-col justify-center items-center">
+      <svg width="40" height="29" viewBox="0 0 40 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M0 15.7336L13.6978 29L40 3.59975L36.2239 0L13.6978 21.7499L3.72382 12.1085L0 15.7336Z" fill="#22EA2A"/>
+        </svg>
+        <span>
+          ALL-NATURAL INGREDIENTS
+        </span>
+    </div>
+    <div class="flex flex-col justify-center items-center">
+      <svg width="40" height="29" viewBox="0 0 40 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M0 15.7336L13.6978 29L40 3.59975L36.2239 0L13.6978 21.7499L3.72382 12.1085L0 15.7336Z" fill="#22EA2A"/>
+        </svg>
+        <span>
+          NO PRESCRIPTION NEEDED
+        </span>
+    </div>
+    <div class="flex flex-col justify-center items-center">
+      <svg width="40" height="29" viewBox="0 0 40 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M0 15.7336L13.6978 29L40 3.59975L36.2239 0L13.6978 21.7499L3.72382 12.1085L0 15.7336Z" fill="#22EA2A"/>
+        </svg>
+        <span>
+          60-DAY MONEY BACK GUARANTEE
+        </span>
+    </div>
+    <div class="flex flex-col justify-center items-center">
+      <svg width="40" height="29" viewBox="0 0 40 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M0 15.7336L13.6978 29L40 3.59975L36.2239 0L13.6978 21.7499L3.72382 12.1085L0 15.7336Z" fill="#22EA2A"/>
+        </svg>
+        <span>
+          FREE SHIPPING WORLDWIDE
+        </span>
+    </div>
+    <div class="flex flex-col justify-center items-center">
+      <svg width="40" height="29" viewBox="0 0 40 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M0 15.7336L13.6978 29L40 3.59975L36.2239 0L13.6978 21.7499L3.72382 12.1085L0 15.7336Z" fill="#22EA2A"/>
+        </svg>
+        <span>
+          100% SECURE ORDERING
+        </span>
+    </div>
+  </div>
+  
+</div>
+<div class="flex flex-col">
+  <div class="relative max-6 flex justify-center items-center mx-6">
+    <a class="w-full text-[22px] justify-center text-white flex max-w-[43rem] items-center py-4 whitespace-nowrap px-12 rounded-20 font-bold bg-green-500 uppercase" href="#some_id">
+      Order <span class="font-bold">now</span> <svg class="ml-3" width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M19 9.49622L0 0L3.18788 9.49622L0 19L19 9.49622Z" fill="white"/>
+        </svg>
+    </a>
+  </div>
+  
+</div>
   </section>
 </div>
   {% schema %}
@@ -97,7 +252,12 @@
         "type": "text",
         "id": "button_label",
         "label": "Button label"
-      }
+      },
+      {
+        "type": "image_picker",
+        "id": "image_bottle",
+        "label": "Image bottle"
+      },
     ],
     "presets": [
       {
