--- a/assets/app.css
+++ b/assets/app.css
@@ -589,6 +589,10 @@ video {
   margin-left: 1.75rem;
   margin-right: 1.75rem;
 }
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
 .my-5 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
@@ -616,6 +620,15 @@ video {
 }
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+.ml-4 {
+  margin-left: 1rem;
+}
+.mt-60 {
+  margin-top: 15rem;
+}
+.mr-2 {
+  margin-right: 0.5rem;
 }
 .block {
   display: block;
@@ -711,6 +724,9 @@ video {
 }
 .gap-3 {
   gap: 0.75rem;
+}
+.gap-2 {
+  gap: 0.5rem;
 }
 .overflow-x-hidden {
   overflow-x: hidden;
