--- a/sections/woman-section.liquid
+++ b/sections/woman-section.liquid
@@ -6,7 +6,7 @@
         <p class="text-sm mb-4">We surveyed hundreds of people and asked them this question...</p>
         <p class="font-bold text-sm mb-4">What's your #1 weight loss challenge?</p>
         <p class="text-sm mb-5">And without a doubt, the top answer we heard from people (all over the world) was...</p>
-        <h4 class="font-bold text-xl mb-4">Cravings, snacking, and overeating — at night!</h4>
+        <h4 class="font-bold text-2xl mb-4">Cravings, snacking, and overeating — at night!</h4>
         <p class="text-sm mb-4">It's sooooo easy to give in to night time temptations after the demands of the day have worn down your willpower...</p>
         <p class="text-sm mb-4">When everything in your body is screaming for that extra helping of dessert (or a late night snack).</p>
         <p class="text-sm">So if you've tried to say NO to night time snacking in the past, but your favorite treats always seem to get the best of you, 
