--- a/sections/woman-section.liquid
+++ b/sections/woman-section.liquid
@@ -1,7 +1,7 @@
 <div class="relative">
-<section id="section-123" class="flex flex-col items-end justify-center">
+<section id="section-123" class="flex flex-col items-center justify-center">
 <div class="ml-4 mt-60 mb-5 text-white">
-    <div class="mr-2 ">
+    <div class="mr-2 font-normal">
         <h2 class="font-bold text-3xl mb-4">The #1 Reason Why Most Diets Fail</h2>
         <p class="text-sm mb-4">We surveyed hundreds of people and asked them this question...</p>
         <p class="font-bold text-sm mb-4">What's your #1 weight loss challenge?</p>
@@ -14,8 +14,8 @@
     </div>
     <div class="flex flex-row justify-between items-center gap-2">
         <div class="w-1/2">
-            <h4 class="font-bold text-xl">Hope is here!</h4>
-            <p>The scientists at PHEN24 have created a new formula that specifically targets night time cravings — 
+            <h4 class="font-bold text-xl mb-4">Hope is here!</h4>
+            <p class="font-normal leading-none">The scientists at PHEN24 have created a new formula that specifically targets night time cravings — 
                 plus many more of the challenges that stop people from getting rid of their unwanted weight.</p>
         </div>
         <div class="w-1/2">
@@ -30,15 +30,16 @@
         </div>
     </div>
 </div>
-<div class="relative flex justify-center items-center mx-6">
-    <a class="w-full text-[22px] justify-center text-white flex max-w-[43rem] items-center py-4 whitespace-nowrap px-12 rounded-20 
-    font-normal bg-green-500 uppercase" href="#some_id">
-      Order <span class="font-bold"> now</span> <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M12 6.5L0.75 12.9952L0.750001 0.00480889L12 6.5Z" fill="black"/>
-        </svg>
-    </a>
-  </div>
-
+<div class="w-full flex justify-center items-center relative bg-black">
+    <div class="relative flex justify-center place-items-center">
+        <a class="w-full text-lg justify-center text-white flex max-w-[43rem] items-center py-2 whitespace-nowrap px-12 rounded-20 
+        font-normal bg-green-500 uppercase" href="#some_id">
+        Order <span class="font-bold"> now</span> <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 6.5L0.75 12.9952L0.750001 0.00480889L12 6.5Z" fill="black"/>
+            </svg>
+        </a>
+    </div>
+</div>
 
 </section>
 </div>
