--- a/assets/app.css
+++ b/assets/app.css
@@ -581,13 +581,13 @@ video {
   margin-left: auto;
   margin-right: auto;
 }
-.mx-6 {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-}
 .mx-7 {
   margin-left: 1.75rem;
   margin-right: 1.75rem;
+}
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
 .mx-3 {
   margin-left: 0.75rem;
@@ -611,9 +611,6 @@ video {
 }
 .mt-5 {
   margin-top: 1.25rem;
-}
-.ml-3 {
-  margin-left: 0.75rem;
 }
 .mb-9 {
   margin-bottom: 2.25rem;
@@ -651,9 +648,6 @@ video {
 .hidden {
   display: none;
 }
-.h-16 {
-  height: 4rem;
-}
 .w-full {
   width: 100%;
 }
@@ -662,9 +656,6 @@ video {
 }
 .w-\[228px\] {
   width: 228px;
-}
-.w-\[18rem\] {
-  width: 18rem;
 }
 .w-1\/2 {
   width: 50%;
@@ -709,6 +700,9 @@ video {
 }
 .flex-col {
   flex-direction: column;
+}
+.place-items-center {
+  place-items: center;
 }
 .items-start {
   align-items: flex-start;
@@ -785,6 +779,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(34 211 238 / var(--tw-bg-opacity));
 }
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
@@ -820,9 +818,9 @@ video {
   padding-left: 1.75rem;
   padding-right: 1.75rem;
 }
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 .px-12 {
   padding-left: 3rem;
@@ -839,9 +837,6 @@ video {
 }
 .pr-1 {
   padding-right: 0.25rem;
-}
-.pb-6 {
-  padding-bottom: 1.5rem;
 }
 .pl-2 {
   padding-left: 0.5rem;
@@ -860,6 +855,10 @@ video {
 }
 .text-\[26px\] {
   font-size: 26px;
+}
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 .text-base {
   font-size: 1rem;
@@ -902,13 +901,12 @@ video {
 .leading-9 {
   line-height: 2.25rem;
 }
+.leading-none {
+  line-height: 1;
+}
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 @media (min-width: 375px) {
 
