--- a/sections/hero-section.liquid
+++ b/sections/hero-section.liquid
@@ -20,14 +20,14 @@
                 {% endif %}
             </div>
             <div class="flex flex-col md:hidden mt-5">
-
-              <div class="relative mx-6 flex flex-row items-center justify-center pb-6 h-16">
-                <a class="text-[22px] justify-center text-black flex w-[18rem] items-center py-3 px-12 rounded-rounded-3 font-bold bg-green-500 uppercase" href="#some_id">
-                  Order now <svg class="ml-3" width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M19 9.49622L0 0L3.18788 9.49622L0 19L19 9.49622Z" fill="black"/>
+            <div class="relative flex justify-center place-items-center">
+                <a class="w-full text-lg justify-center text-white flex max-w-[43rem] items-center py-2 whitespace-nowrap px-12 rounded-20 
+                font-normal bg-green-500 uppercase" href="#some_id">
+                Order <span class="font-bold"> now</span> <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 6.5L0.75 12.9952L0.750001 0.00480889L12 6.5Z" fill="black"/>
                     </svg>
                 </a>
-              </div>
+            </div>
             </div>
             <div class="relative hidden md:block">
               {% if section.settings.image != blank %}
@@ -218,13 +218,14 @@
   
 </div>
 <div class="flex flex-col">
-  <div class="relative max-6 flex justify-center items-center mx-6">
-    <a class="w-full text-[22px] justify-center text-white flex max-w-[43rem] items-center py-4 whitespace-nowrap px-12 rounded-20 font-normal bg-green-500 uppercase" href="#some_id">
-      Order <span class="font-bold">now</span> <span class="font-bold">now</span> <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <div class="relative flex justify-center place-items-center">
+    <a class="w-full text-lg justify-center text-white flex max-w-[43rem] items-center py-2 whitespace-nowrap px-12 rounded-20 
+    font-normal bg-green-500 uppercase" href="#some_id">
+    Order <span class="font-bold"> now</span> <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M12 6.5L0.75 12.9952L0.750001 0.00480889L12 6.5Z" fill="black"/>
         </svg>
     </a>
-  </div>
+</div>
   
 </div>
   </section>
