--- a/sections/hero-section.liquid
+++ b/sections/hero-section.liquid
@@ -71,8 +71,8 @@
                 {{ 'image' | placeholder_svg_tag: 'placeholder-svg' }}
                 {% endif %}
     </div>
-    <div class="flex justify-center items-center rounded-20 border-orange-400 relative">
-      <div class="absolute mx-3 -top-4 border-3 bg-orange-400 rounded-20 flex justify-center items-center px-7 text-base font-normal text-white" >
+    <div class="flex justify-center items-center rounded-20 border-3 border-orange-400 relative">
+      <div class="absolute mx-3 -top-4  bg-orange-400 rounded-20 flex justify-center items-center px-7 text-base font-normal text-white" >
       ALL DAY
       </div>
       <div class="flex flex-row basis-1/3 my-5">
@@ -111,8 +111,8 @@
           </div>
       </div>
   </div>
-  <div class="flex justify-center items-center rounded-20 border-cyan-400 relative mt-5">
-    <div class="absolute mx-3 -top-4 border-3 bg-cyan-400 rounded-20 flex justify-center items-center px-7 text-base font-normal text-white" >
+  <div class="flex justify-center items-center rounded-20 border-3 border-cyan-400 relative mt-5">
+    <div class="absolute mx-3 -top-4 bg-cyan-400 rounded-20 flex justify-center items-center px-7 text-base font-normal text-white" >
     ALL NIGHT
     </div>
     <div class="flex flex-row basis-1/3 my-5">
