--- a/assets/app.css
+++ b/assets/app.css
@@ -748,6 +748,9 @@ video {
 .rounded-20 {
   border-radius: 30px;
 }
+.border-3 {
+  border-width: 3px;
+}
 .border-b-\[5px\] {
   border-bottom-width: 5px;
 }
