--- a/sections/hero-section.liquid
+++ b/sections/hero-section.liquid
@@ -71,7 +71,7 @@
                 {{ 'image' | placeholder_svg_tag: 'placeholder-svg' }}
                 {% endif %}
     </div>
-    <div class="flex justify-center items-center rounded-20 border-3 border-orange-400 relative">
+    <div class="flex justify-center items-center rounded-20 border-3 border-orange-400 relative mx-2">
       <div class="absolute mx-3 -top-4  bg-orange-400 rounded-20 flex justify-center items-center px-7 text-base font-normal text-white" >
       ALL DAY
       </div>
@@ -111,7 +111,7 @@
           </div>
       </div>
   </div>
-  <div class="flex justify-center items-center rounded-20 border-3 border-cyan-400 relative mt-5">
+  <div class="flex justify-center items-center rounded-20 border-3 border-cyan-400 relative mt-5 mx-2">
     <div class="absolute mx-3 -top-4 bg-cyan-400 rounded-20 flex justify-center items-center px-7 text-base font-normal text-white" >
     ALL NIGHT
     </div>
