--- a/sections/hero-section.liquid
+++ b/sections/hero-section.liquid
@@ -49,7 +49,8 @@
       {% endif %}
       <div class="flex flex-col">
       <div class="relative max-6 flex justify-center items-center mx-6">
-        <a class="w-full text-[22px] justify-center text-black flex max-w-[43rem] items-center py-4 whitespace-nowrap px-12 rounded-20 font-normal bg-green-500 uppercase" href="#some_id">
+        <a class="w-full text-[22px] justify-center text-black flex max-w-[43rem] items-center py-4 
+          whitespace-nowrap px-12 rounded-20 font-normal bg-green-500 uppercase" href="#some_id">
           Order <span class="font-bold mr-2">now</span> <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M12 6.5L0.75 12.9952L0.750001 0.00480889L12 6.5Z" fill="black"/>
             </svg>
@@ -75,7 +76,7 @@
       <div class="absolute mx-3 -top-4  bg-orange-400 rounded-20 flex justify-center items-center px-7 text-base font-normal text-white" >
       ALL DAY
       </div>
-      <div class="flex flex-row basis-1/3 my-5">
+      <div class="flex flex-row justify-around w-full my-4">
           <div class="flex justify-center items-center flex-col gap-4">
               <div class="img">
                   <svg width="96" height="97" viewBox="0 0 96 97" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -115,7 +116,7 @@
     <div class="absolute mx-3 -top-4 bg-cyan-400 rounded-20 flex justify-center items-center px-7 text-base font-normal text-white" >
     ALL NIGHT
     </div>
-    <div class="flex flex-row basis-1/3 my-5">
+    <div class="flex flex-row justify-around w-full my-4">
         <div class="flex justify-center items-center flex-col gap-4">
             <div class="img">
                 <svg width="96" height="97" viewBox="0 0 96 97" fill="none" xmlns="http://www.w3.org/2000/svg">
