--- a/sections/hero-section.liquid
+++ b/sections/hero-section.liquid
@@ -167,7 +167,7 @@
                 {% endif %}
   </div>
   <div class="flex flex-col justify-center items-center gap-3">
-    <div class="flex flex-col justify-center items-center">
+    <div class="flex flex-col justify-center items-center text-center text-white">
       <svg width="40" height="29" viewBox="0 0 40 29" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M0 15.7336L13.6978 29L40 3.59975L36.2239 0L13.6978 21.7499L3.72382 12.1085L0 15.7336Z" fill="#22EA2A"/>
         </svg>
@@ -175,7 +175,7 @@
           SAFE AND EFFECTIVE FORMULA
         </span>
     </div>
-    <div class="flex flex-col justify-center items-center">
+    <div class="flex flex-col justify-center items-center text-center text-white">
       <svg width="40" height="29" viewBox="0 0 40 29" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M0 15.7336L13.6978 29L40 3.59975L36.2239 0L13.6978 21.7499L3.72382 12.1085L0 15.7336Z" fill="#22EA2A"/>
         </svg>
@@ -183,7 +183,7 @@
           ALL-NATURAL INGREDIENTS
         </span>
     </div>
-    <div class="flex flex-col justify-center items-center">
+    <div class="flex flex-col justify-center items-center text-center text-white">
       <svg width="40" height="29" viewBox="0 0 40 29" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M0 15.7336L13.6978 29L40 3.59975L36.2239 0L13.6978 21.7499L3.72382 12.1085L0 15.7336Z" fill="#22EA2A"/>
         </svg>
@@ -191,7 +191,7 @@
           NO PRESCRIPTION NEEDED
         </span>
     </div>
-    <div class="flex flex-col justify-center items-center">
+    <div class="flex flex-col justify-center items-center text-center text-white">
       <svg width="40" height="29" viewBox="0 0 40 29" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M0 15.7336L13.6978 29L40 3.59975L36.2239 0L13.6978 21.7499L3.72382 12.1085L0 15.7336Z" fill="#22EA2A"/>
         </svg>
@@ -199,7 +199,7 @@
           60-DAY MONEY BACK GUARANTEE
         </span>
     </div>
-    <div class="flex flex-col justify-center items-center">
+    <div class="flex flex-col justify-center items-center text-center text-white">
       <svg width="40" height="29" viewBox="0 0 40 29" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M0 15.7336L13.6978 29L40 3.59975L36.2239 0L13.6978 21.7499L3.72382 12.1085L0 15.7336Z" fill="#22EA2A"/>
         </svg>
@@ -207,7 +207,7 @@
           FREE SHIPPING WORLDWIDE
         </span>
     </div>
-    <div class="flex flex-col justify-center items-center">
+    <div class="flex flex-col justify-center items-center text-center text-white">
       <svg width="40" height="29" viewBox="0 0 40 29" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M0 15.7336L13.6978 29L40 3.59975L36.2239 0L13.6978 21.7499L3.72382 12.1085L0 15.7336Z" fill="#22EA2A"/>
         </svg>
