--- a/sections/woman-section.liquid
+++ b/sections/woman-section.liquid
@@ -30,7 +30,7 @@
         </div>
     </div>
 </div>
-<div class="w-full flex justify-center items-center relative bg-black">
+<div class="w-full flex justify-center items-center relative bg-black pb-8">
     <div class="relative flex justify-center place-items-center">
         <a class="w-full text-lg justify-center text-black flex max-w-[43rem] items-center py-2 whitespace-nowrap px-12 rounded-20 
         font-normal bg-green-500 uppercase" href="#some_id">
