--- a/assets/app.css
+++ b/assets/app.css
@@ -570,6 +570,9 @@ video {
 .-top-4 {
   top: -1rem;
 }
+.-top-6 {
+  top: -1.5rem;
+}
 .m-auto {
   margin: auto;
 }
@@ -604,6 +607,10 @@ video {
 .my-5 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
+}
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
 }
 .mb-7 {
   margin-bottom: 1.75rem;
