--- a/sections/orange-section.liquid
+++ b/sections/orange-section.liquid
@@ -1,10 +1,10 @@
 <div class="relative">
     <section class="relative">
         <div class="flex flex-col relative items-center">
-            <div class="relative flex text-3xl items-center my-3">
+            <div class="relative flex text-3xl items-center my-3 text-center">
                 <h1>The 24/7 Weight <br/> Loss Support The <br/>World's Been <br/>Waiting For!</h1>
             </div>
-            <div class="relative flex items-center text-base">
+            <div class="relative flex items-center text-base mx-14 text-center">
                 <p>While other products assist you during 
                     <br/>the day or the night — PHEN24 doubles 
                     <br/>your fat burning power by flooding your 
@@ -12,7 +12,7 @@
                     <br/>appetite shrinking ingredients every hour of every day. 
                 </p>
             </div>
-            <div class="absolute -top-6">
+            <div class="relative -top-6">
                 {% if section.settings.woman != blank %}
             {% include 'responsive-image' with
                     image: section.settings.woman,
@@ -24,9 +24,9 @@
             </div>
         </div>
         <div>
-            <div class="-skew-y-15">
+            <div class="-skew-y-15 bg-orange-500">
                 <div class="skew-y-15 flex flex-row">
-                    <div class="flex items-center justify-center">
+                    <div class="flex flex-col items-center justify-center">
                         <h3>THE DAY FORMULA</h3>
                         <p>The DAY formula kick-starts your metabolism in the morning, and keeps it going strong all day long... even if you're stuck at your desk and you can't get to the gym.
                             </p>
