--- a/assets/app.css
+++ b/assets/app.css
@@ -570,8 +570,17 @@ video {
 .-top-4 {
   top: -1rem;
 }
-.-top-6 {
-  top: -1.5rem;
+.-top-44 {
+  top: -11rem;
+}
+.-top-20 {
+  top: -5rem;
+}
+.z-10 {
+  z-index: 10;
+}
+.z-0 {
+  z-index: 0;
 }
 .m-auto {
   margin: auto;
@@ -642,6 +651,9 @@ video {
 }
 .mt-3 {
   margin-top: 0.75rem;
+}
+.ml-6 {
+  margin-left: 1.5rem;
 }
 .ml-4 {
   margin-left: 1rem;
