--- a/sections/orange-section.liquid
+++ b/sections/orange-section.liquid
@@ -1,5 +1,6 @@
 <div class="relative">
     <section class="relative">
+    <div class="relative">
         <div class="flex flex-col absolute items-center">
             <div class="relative flex text-3xl items-center my-3 text-center font-bold z-10">
                 <h1>The 24/7 Weight <br/> Loss Support The <br/>World's Been <br/>Waiting For!</h1>
@@ -23,6 +24,7 @@
             {% endif %}
             </div>
         </div>
+    </div>
         <div class="relative -top-20 -skew-y-15 bg-orange-500">
             <div class="skew-y-15 flex flex-row">
                 <div class="flex flex-col items-center justify-center ml-6">
