--- a/sections/orange-section.liquid
+++ b/sections/orange-section.liquid
@@ -1,8 +1,7 @@
 <div class="relative">
     <section class="relative">
-    <div class="relative">
-        <div class="flex flex-col absolute items-center">
-            <div class="relative flex text-3xl items-center my-3 text-center font-bold z-10">
+        <div class="flex flex-col relative items-center">
+            <div class="w-full bg-heading-bg justify-center relative flex text-3xl items-center mb-3 text-center font-bold z-10">
                 <h1>The 24/7 Weight <br/> Loss Support The <br/>World's Been <br/>Waiting For!</h1>
             </div>
             <div class="relative flex items-center text-base mx-14 text-center z-10">
@@ -13,7 +12,7 @@
                     appetite shrinking ingredients every hour of every day. 
                 </p>
             </div>
-            <div class="relative -top-44 z-0">
+            <div class="relative -mt-56 z-0">
                 {% if section.settings.woman != blank %}
             {% include 'responsive-image' with
                     image: section.settings.woman,
@@ -24,7 +23,6 @@
             {% endif %}
             </div>
         </div>
-    </div>
         <div class="relative -top-20 -skew-y-15 bg-orange-500">
             <div class="skew-y-15 flex flex-row">
                 <div class="flex flex-col items-center justify-center ml-6">
