--- a/sections/orange-section.liquid
+++ b/sections/orange-section.liquid
@@ -25,7 +25,7 @@
         </div>
         <div class="relative -top-20 -skew-y-15 bg-orange-500">
             <div class="skew-y-15 flex flex-row">
-                <div class="flex flex-col items-center justify-center ml-6">
+                <div class="flex flex-col items-start justify-center ml-6">
                     <h3 class="font-bold text-lg">THE DAY FORMULA</h3>
                     <p class="font-normal text-sm">The DAY formula kick-starts your metabolism in the morning, and keeps it going strong all day long... even if you're stuck at your desk and you can't get to the gym.
                         </p>
