--- a/assets/app.css
+++ b/assets/app.css
@@ -573,6 +573,12 @@ video {
 .-top-20 {
   top: -5rem;
 }
+.-top-40 {
+  top: -10rem;
+}
+.top-14 {
+  top: 3.5rem;
+}
 .z-10 {
   z-index: 10;
 }
@@ -830,6 +836,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
+.bg-violet-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(139 92 246 / var(--tw-bg-opacity));
+}
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -839,6 +849,9 @@ video {
 }
 .bg-heading-bg {
   background-image: linear-gradient(180deg, #EEEFF3 61.98%, rgba(238, 239, 243, 0) 100%);;
+}
+.bg-violet-section-bg {
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 9.96%, #000000 40.44%);;
 }
 .from-cyan-500 {
   --tw-gradient-from: #06b6d4;
