--- a/sections/day-night.liquid
+++ b/sections/day-night.liquid
@@ -1,8 +1,8 @@
 <div class="relative text-white">
-<section class="relative flex flex-col mx-3 justify-center items-center rounded-20 bg-all-day">
-    <div class="flex flex-col mb-5 mx-3">
-        <h1 class="font-bold text-3xl">ALL DAY</h1>
-        <p>Calorie restriction can bring your metabolism to a screeching halt — but PHEN24 DAY keeps your metabolism burning bright all day long.
+<section class="my-2 relative flex flex-col mx-3 justify-center items-center rounded-20 bg-all-day font-bold text-sm">
+    <div class="flex flex-col mb-5 mx-3 items-center">
+        <h1 class="font-bold text-3xl my-3">ALL DAY</h1>
+        <p class="text-center">Calorie restriction can bring your metabolism to a screeching halt — but PHEN24 DAY keeps your metabolism burning bright all day long.
             </p>
     </div>
 
@@ -11,8 +11,8 @@
             <path d="M94.5 48.5C94.5 74.4721 73.6666 95.5 48 95.5C22.3334 95.5 1.5 74.4721 1.5 48.5C1.5 22.5279 22.3334 1.5 48 1.5C73.6666 1.5 94.5 22.5279 94.5 48.5Z" stroke="white" stroke-width="3"/>
             <path d="M65.04 31.6999C60.0599 32.9598 58.14 34.88 56.76 38.9599C57.36 34.6999 57.12 22.9399 42.06 17.3599C44.76 25.2199 44.7001 37.5199 40.1401 41.1799C41.5802 36.3199 37.7401 32.1199 34.0201 29.0599C36.18 41.5999 20.8801 43.8199 26.7001 59.6599C28.4401 64.34 32.5801 67.9399 37.6801 70.0999C34.5 61.6999 41.9401 50.2999 47.2801 47.8999C45.6602 51.9198 49.14 57.9199 51.3 59.2999C50.2199 55.88 51.7801 54.1399 52.6199 53.2999C53.0398 59.5999 62.1599 62.6599 58.5599 71.2999C64.0799 69.3198 68.9999 65.1199 70.4999 57.1399C72.2997 47.3599 62.7599 39.7999 65.0399 31.6999H65.04Z" fill="white"/>
             </svg>   
-        <h1 class="font-bold text-3xl leading-none">BURN FAT</h1>
-        <p>PHEN24 contains all-natural ingredients that support burning extra calories, so that you slowly (but surely) gobble up excess fat stores.<sup><small>[1]</small></sup>
+        <h1 class="font-bold text-3xl leading-none mt-4">BURN FAT</h1>
+        <p class="text-center">PHEN24 contains all-natural ingredients that support burning extra calories, so that you slowly (but surely) gobble up excess fat stores.<sup><small>[1]</small></sup>
             </p>
     </div>
     <div class="my-3 flex flex-col justify-center items-center mb-5 mx-3">
@@ -27,8 +27,8 @@
             </clipPath>
             </defs>
             </svg>
-        <h1 class="font-bold text-3xl leading-none">BANISH HUNGER</h1>
-        <p>Being able to satisfy your hunger with smaller portions is a game changer — and now you have some secret "help" to make that happen.<sup><small>[2]</small></sup>
+        <h1 class="font-bold text-3xl leading-none mt-4">BANISH HUNGER</h1>
+        <p class="text-center">Being able to satisfy your hunger with smaller portions is a game changer — and now you have some secret "help" to make that happen.<sup><small>[2]</small></sup>
             </p>
     </div>
     <div class="my-3 flex flex-col justify-center items-center mb-5 mx-3">
@@ -36,17 +36,17 @@
             <path d="M94.5 48.5C94.5 74.4721 73.6666 95.5 48 95.5C22.3334 95.5 1.5 74.4721 1.5 48.5C1.5 22.5279 22.3334 1.5 48 1.5C73.6666 1.5 94.5 22.5279 94.5 48.5Z" stroke="white" stroke-width="3"/>
             <path d="M43.625 20.6533V22.8408H37.0625C36.1923 22.8408 35.3576 23.1865 34.7424 23.802C34.1269 24.4172 33.7812 25.2519 33.7812 26.1221V73.1533C33.7812 74.0235 34.1269 74.8582 34.7424 75.4734C35.3576 76.0889 36.1923 76.4346 37.0625 76.4346H58.9375C59.8077 76.4346 60.6424 76.0889 61.2576 75.4734C61.8731 74.8582 62.2188 74.0235 62.2188 73.1533V26.1221C62.2188 25.2519 61.8731 24.4172 61.2576 23.802C60.6424 23.1865 59.8077 22.8408 58.9375 22.8408H52.375V20.6533C52.375 20.3632 52.2597 20.085 52.0546 19.8799C51.8495 19.6749 51.5713 19.5596 51.2812 19.5596H44.7187C44.4287 19.5596 44.1504 19.6749 43.9454 19.8799C43.7403 20.085 43.625 20.3632 43.625 20.6533H43.625ZM58.9375 25.0283C59.2276 25.0283 59.5058 25.1436 59.7109 25.3487C59.916 25.5538 60.0313 25.832 60.0313 26.1221V73.1533C60.0313 73.4434 59.916 73.7216 59.7109 73.9267C59.5058 74.1318 59.2276 74.2471 58.9375 74.2471H37.0625C36.7724 74.2471 36.4942 74.1318 36.2891 73.9267C36.084 73.7216 35.9687 73.4434 35.9687 73.1533V26.1221C35.9687 25.832 36.084 25.5538 36.2891 25.3487C36.4942 25.1436 36.7724 25.0283 37.0625 25.0283H58.9375ZM37.0625 27.7627V71.5127C37.0625 71.9479 37.2354 72.3651 37.5431 72.6728C37.8507 72.9804 38.2679 73.1533 38.7031 73.1533H57.2969C57.7321 73.1533 58.1493 72.9804 58.457 72.6728C58.7646 72.3652 58.9375 71.9479 58.9375 71.5127V27.7627C58.9375 27.3275 58.7646 26.9103 58.457 26.6026C58.1494 26.295 57.7321 26.1221 57.2969 26.1221H38.7031C38.2679 26.1221 37.8507 26.295 37.5431 26.6026C37.2355 26.9102 37.0625 27.3275 37.0625 27.7627ZM49.0938 61.1224V67.6849C49.0938 68.0756 48.8853 68.4366 48.5469 68.6321C48.2085 68.8274 47.7915 68.8274 47.4531 68.6321C47.1147 68.4366 46.9062 68.0756 46.9062 67.6849V61.1224C46.9062 60.7316 47.1147 60.3706 47.4531 60.1751C47.7915 59.9799 48.2085 59.9799 48.5469 60.1751C48.8853 60.3707 49.0938 60.7316 49.0938 61.1224ZM49.0938 31.5911V33.7786H51.2812C51.672 33.7786 52.033 33.9871 52.2285 34.3255C52.4237 34.6639 52.4237 35.0808 52.2285 35.4192C52.033 35.7576 51.672 35.9661 51.2812 35.9661H49.0938V38.1536C49.0938 38.5444 48.8853 38.9054 48.5469 39.1008C48.2085 39.2961 47.7915 39.2961 47.4531 39.1008C47.1147 38.9053 46.9062 38.5444 46.9062 38.1536V35.9661H44.7188C44.328 35.9661 43.967 35.7576 43.7715 35.4192C43.5763 35.0809 43.5763 34.6639 43.7715 34.3255C43.967 33.9871 44.328 33.7786 44.7188 33.7786H46.9062V31.5911C46.9062 31.2003 47.1147 30.8394 47.4531 30.6439C47.7915 30.4486 48.2085 30.4486 48.5469 30.6439C48.8853 30.8394 49.0938 31.2003 49.0938 31.5911Z" fill="white"/>
             </svg>
-        <h1 class="font-bold text-3xl leading-none">STAY ENERGIZED</h1>
-        <p>With so much of your stubborn, old fat being converted into extra energy, you're going to be bouncing off the walls. Watch out world!<sup><small>[3]</small></sup>
+        <h1 class="font-bold text-3xl leading-none mt-4">STAY ENERGIZED</h1>
+        <p class="text-center">With so much of your stubborn, old fat being converted into extra energy, you're going to be bouncing off the walls. Watch out world!<sup><small>[3]</small></sup>
             </p>
     </div>
     
 </section>
 
-<section class="relative flex flex-col mx-3 justify-center items-center rounded-20 bg-all-night">
+<section class="my-2 relative flex flex-col mx-3 justify-center items-center rounded-20 bg-all-night font-bold">
     <div class="flex flex-col mb-5 mx-3">
-        <h1 class="font-bold text-3xl">ALL NIGHT</h1>
-        <p>The carbs come out at night — so PHEN24 NIGHT is formulated to keep you "on the wagon" in the evening, and promote fat burning while you sleep.
+        <h1 class="font-bold text-3xl my-3">ALL NIGHT</h1>
+        <p class="text-center">The carbs come out at night — so PHEN24 NIGHT is formulated to keep you "on the wagon" in the evening, and promote fat burning while you sleep.
             </p>
     </div>
     <div class="m-3 flex flex-col justify-center items-center mb-5">
@@ -56,8 +56,8 @@
             <path d="M80.088 26.44C77.4319 27.112 76.408 28.136 75.672 30.312C75.992 28.04 75.864 21.768 67.832 18.792C69.272 22.984 69.24 29.544 66.8081 31.496C67.5761 28.904 65.5281 26.664 63.5441 25.032C64.696 31.72 56.5361 32.904 59.6401 41.352C60.5681 43.848 62.7761 45.768 65.4961 46.92C63.8 42.44 67.768 36.36 70.6161 35.08C69.7521 37.2239 71.608 40.424 72.76 41.16C72.1839 39.336 73.016 38.408 73.4639 37.96C73.6879 41.32 78.5519 42.952 76.6319 47.56C79.5759 46.5039 82.1999 44.264 82.9999 40.008C83.9598 34.792 78.8719 30.76 80.0879 26.44H80.088Z" fill="white"/>
             <path d="M37.088 26.44C34.4319 27.112 33.408 28.136 32.672 30.312C32.992 28.04 32.864 21.768 24.832 18.792C26.272 22.984 26.24 29.544 23.8081 31.496C24.5761 28.904 22.5281 26.664 20.5441 25.032C21.696 31.72 13.5361 32.904 16.6401 41.352C17.5681 43.848 19.7761 45.768 22.4961 46.92C20.8 42.44 24.768 36.36 27.6161 35.08C26.7521 37.2239 28.608 40.424 29.76 41.16C29.1839 39.336 30.016 38.408 30.4639 37.96C30.6879 41.32 35.5519 42.952 33.6319 47.56C36.5759 46.5039 39.1999 44.264 39.9999 40.008C40.9598 34.792 35.8719 30.76 37.0879 26.44H37.088Z" fill="white"/>
             </svg>
-        <h1 class="font-bold text-3xl leading-none">BURN EXTRA FAT</h1>
-        <p>More fat burning? Heck yes! PHEN24 helps you lose weight at night without stimulants — so you sleep soundly and wake up feeling slimmer.<sup><small> [4,5]</small></sup>
+        <h1 class="font-bold text-3xl leading-none mt-4">BURN EXTRA FAT</h1>
+        <p class="text-center">More fat burning? Heck yes! PHEN24 helps you lose weight at night without stimulants — so you sleep soundly and wake up feeling slimmer.<sup><small> [4,5]</small></sup>
             </p>
     </div>
     <div class="my-3 flex flex-col justify-center items-center mb-5 mx-3">
@@ -68,8 +68,8 @@
             <line x1="13.9393" y1="83.1146" x2="81.1145" y2="15.9395" stroke="white" stroke-width="3"/>
             </svg>
             
-        <h1 class="font-bold text-3xl leading-none">CRUSH CRAVINGS</h1>
-        <p>Nighttime is when most people blow it. So PHEN24 includes ingredients designed to make evening eating seem less appealing.<sup><small> [6]</small></sup>
+        <h1 class="font-bold text-3xl leading-none mt-4">CRUSH CRAVINGS</h1>
+        <p class="text-center">Nighttime is when most people blow it. So PHEN24 includes ingredients designed to make evening eating seem less appealing.<sup><small> [6]</small></sup>
             </p>
     </div>
     <div class="my-3 flex flex-col justify-center items-center mb-5 mx-3">
@@ -80,13 +80,13 @@
             <path d="M45.82 46.2502C45.82 46.5717 45.9917 46.869 46.27 47.0297C46.5485 47.1905 46.8917 47.1905 47.17 47.0297C47.4485 46.869 47.62 46.5717 47.62 46.2502C47.62 44.3182 45.535 42.8057 42.8727 42.8057C40.2106 42.8057 38.126 44.3184 38.126 46.2502H38.1262C38.1262 46.5717 38.2977 46.869 38.5762 47.0297C38.8547 47.1905 39.1977 47.1905 39.4762 47.0297C39.7547 46.869 39.9262 46.5717 39.9262 46.2502C39.9262 45.4701 41.1364 44.6057 42.8729 44.6057C44.6093 44.6057 45.82 45.4721 45.82 46.2502H45.82Z" fill="white"/>
             <path d="M55.126 42.8057C52.4639 42.8057 50.3787 44.3184 50.3787 46.2502C50.3787 46.5717 50.5504 46.869 50.8287 47.0297C51.1072 47.1905 51.4504 47.1905 51.7287 47.0297C52.0072 46.869 52.1787 46.5717 52.1787 46.2502C52.1787 45.4701 53.3889 44.6057 55.126 44.6057C56.8629 44.6057 58.0727 45.4721 58.0727 46.2502C58.0727 46.5717 58.2442 46.869 58.5227 47.0297C58.801 47.1905 59.1442 47.1905 59.4227 47.0297C59.701 46.869 59.8727 46.5717 59.8727 46.2502C59.8727 44.3182 57.7877 42.8057 55.126 42.8057Z" fill="white"/>
             </svg>
-        <h1 class="font-bold text-3xl leading-none">BOOST MOOD</h1>
-        <p>Eating creates a "fat and happy" feeling in your brain — but PHEN24 helps you feel great — no matter how much you eat (or don't eat).<sup><small>[7]</small></sup>
+        <h1 class="font-bold text-3xl leading-none mt-4">BOOST MOOD</h1>
+        <p class="text-center">Eating creates a "fat and happy" feeling in your brain — but PHEN24 helps you feel great — no matter how much you eat (or don't eat).<sup><small>[7]</small></sup>
             </p>
     </div>
     
 </section>
-<div class="w-full flex justify-center items-center relative bg-black pb-8">
+<div class="w-full flex justify-center items-center relative pb-8">
     <div class="relative flex justify-center place-items-center">
         <a class="w-full text-lg justify-center text-black flex max-w-[43rem] items-center py-2 whitespace-nowrap px-12 rounded-20 
         font-normal bg-green-500 uppercase" href="#some_id">
