--- a/assets/app.css
+++ b/assets/app.css
@@ -576,9 +576,6 @@ video {
 .-top-40 {
   top: -10rem;
 }
-.top-14 {
-  top: 3.5rem;
-}
 .z-10 {
   z-index: 10;
 }
@@ -590,6 +587,10 @@ video {
 }
 .m-auto {
   margin: auto;
+}
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 .mx-3 {
   margin-left: 0.75rem;
@@ -634,6 +635,9 @@ video {
 .mb-5 {
   margin-bottom: 1.25rem;
 }
+.mt-4 {
+  margin-top: 1rem;
+}
 .mr-2 {
   margin-right: 0.5rem;
 }
@@ -673,6 +677,9 @@ video {
 .ml-4 {
   margin-left: 1rem;
 }
+.mt-14 {
+  margin-top: 3.5rem;
+}
 .mt-60 {
   margin-top: 15rem;
 }
@@ -693,6 +700,9 @@ video {
 }
 .hidden {
   display: none;
+}
+.min-h-300 {
+  min-height: 300px;
 }
 .w-full {
   width: 100%;
@@ -735,12 +745,12 @@ video {
 .basis-1\/3 {
   flex-basis: 33.333333%;
 }
-.-skew-y-15 {
-  --tw-skew-y: -15deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
 .skew-y-15 {
   --tw-skew-y: 15deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.-skew-y-15 {
+  --tw-skew-y: -15deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .transform {
@@ -820,10 +830,6 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(34 211 238 / var(--tw-border-opacity));
 }
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
 .bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
@@ -851,6 +857,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(139 92 246 / var(--tw-bg-opacity));
 }
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
 .bg-all-day {
   background-image: linear-gradient(180deg, #FF9900 0%, #EA552E 100%);;
 }
@@ -873,6 +883,10 @@ video {
 }
 .to-purple-700 {
   --tw-gradient-to: #7e22ce;
+}
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .py-2 {
   padding-top: 0.5rem;
@@ -930,6 +944,10 @@ video {
 .text-center {
   text-align: center;
 }
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
@@ -950,10 +968,6 @@ video {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
-}
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
 }
 .text-2xl {
   font-size: 1.5rem;
