--- a/sections/orange-section.liquid
+++ b/sections/orange-section.liquid
@@ -23,25 +23,26 @@
             {% endif %}
             </div> 
         </div>
-        <div class="relative -top-20 -skew-y-15 bg-orange-500">
-            <div class="skew-y-15 flex flex-row">
-                <div class="flex flex-col items-start justify-center ml-6">
-                    <h3 class="font-bold text-lg">THE DAY FORMULA</h3>
-                    <p class="font-normal text-sm">The DAY formula kick-starts your metabolism in the morning, and keeps it going strong all day long... even if you're stuck at your desk and you can't get to the gym.
-                        </p>
-                </div>
-                <div class="flex items-center justify-center">
-                    {% if section.settings.bottle != blank %}
-                    {% include 'responsive-image' with
-                        image: section.settings.bottle,
-                        image_class: "",
-                        max_width: 143,
-                        max_height: 267
-                    %}
-                    {% endif %}
-                </div>
+        <div class="skew-y-15 bg-orange-500 absolute min-h-300">
+        </div>
+        <div class="flex flex-row relative">
+            <div class="flex flex-col items-start justify-center ml-6">
+                <h3 class="font-bold text-lg">THE DAY FORMULA</h3>
+                <p class="font-normal text-sm">The DAY formula kick-starts your metabolism in the morning, and keeps it going strong all day long... even if you're stuck at your desk and you can't get to the gym.
+                    </p>
+            </div>
+            <div class="flex items-center justify-center">
+                {% if section.settings.bottle1 != blank %}
+                {% include 'responsive-image' with
+                    image: section.settings.bottle1,
+                    image_class: "",
+                    max_width: 143,
+                    max_height: 267
+                %}
+                {% endif %}
             </div>
         </div>
+        
         
     </section>
 </div>
@@ -57,7 +58,7 @@
     },
     {
         "type": "image_picker",
-        "id": "bottle",
+        "id": "bottle1",
         "label": "Bottle"
     }
     ],
